MOSIP-32635 Fixed sonar issue
Signed-off-by: kameshsr <kameshsr1338@gmail.com>